--- a/templates/team/new.html.twig
+++ b/templates/team/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Nouvelle équipe{% endblock %}
+{% block title %}{{ 'teams.new.page_title'|trans }}{% endblock %}
 
 {% block body %}
 <div class="form-container">
@@ -9,7 +9,7 @@
             <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"/>
             </svg>
-            Retour
+            {{ 'teams.new.back'|trans }}
         </a>
     </div>
 
@@ -20,14 +20,16 @@
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"/>
                 </svg>
             </div>
-            <h1>Créer une nouvelle équipe</h1>
-            <p>Commencez à collaborer en créant votre équipe</p>
+
+            <h1>{{ 'teams.new.header.title'|trans }}</h1>
+            <p>{{ 'teams.new.header.subtitle'|trans }}</p>
         </div>
 
         <div class="form-card-body">
-
-            {% include 'team/_form.html.twig' with {'form': form, 'button_label': "Créer l'équipe"} %}
-            
+            {% include 'team/_form.html.twig' with {
+                'form': form,
+                'button_label': 'teams.new.form.submit_create_team'|trans
+            } %}
         </div>
     </div>
 </div>
