--- a/templates/settings/index.html.twig
+++ b/templates/settings/index.html.twig
@@ -444,7 +444,7 @@
   <section class="settings-section">
     <ul class="settings-list" role="list">
       <li class="settings-item">
-        <a class="settings-link" href="">
+        <a class="settings-link" href="{{path('app_user_profile')}}">
           <span class="settings-icon"><i class="fa-regular fa-id-card"></i></span>
           <span class="settings-text">{{ 'settings.menu.personal_data'|trans }}</span>
           <i class="fa-solid fa-chevron-right settings-chevron" aria-hidden="true"></i>
@@ -452,7 +452,7 @@
       </li>
 
       <li class="settings-item">
-        <a class="settings-link" href="">
+        <a class="settings-link" href="{{path('app_user_preferences')}}">
           <span class="settings-icon"><i class="fa-solid fa-sliders"></i></span>
           <span class="settings-text">{{ 'settings.menu.preferences'|trans }}</span>
           <i class="fa-solid fa-chevron-right settings-chevron" aria-hidden="true"></i>
