--- a/templates/components/parts/logo.html.twig
+++ b/templates/components/parts/logo.html.twig
@@ -48,7 +48,7 @@
   color: var(--color-text-dark);
 }
 </style>
-      <a href="#" class="nav-logo">
+      <a href="{{path('app_landing')}}" class="nav-logo">
   <div class="nav-logo-icon">
     <i class="fas fa-key"></i>
   </div>
